--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,9 @@
 {
-	"name": "topic-presser",
+	"name": "topic-presser-ui",
 	"version": "0.1.0",
 	"private": true,
+	"author": "Nick Barone",
+	"license": "MIT",
 	"dependencies": {
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
