--- a/ui/package.json
+++ b/ui/package.json
@@ -5,6 +5,7 @@
 	"author": "Nick Barone",
 	"license": "MIT",
 	"dependencies": {
+		"axios": "^0.18.0",
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
 		"react-scripts": "1.1.4",
