--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
 		"body-parser": "^1.18.2",
 		"chalk": "^2.4.0",
 		"express": "^4.16.3",
-		"mongodb": "^3.0.7"
+		"mongodb": "^3.0.7",
+		"sentiment": "^4.2.0",
+		"striptags": "^3.1.1"
 	}
 }
